loggedOut header and navbar

--- a/legalNotice.html
+++ b/legalNotice.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Notice</title>
-    <script src="/js/navBar.js"></script>
-    <link rel="stylesheet" href="/styles/legalNotice.css">
     <script src="js/header.js"></script>
+    <script src="/js/navBar.js"></script>
+    <script src="js/legalNotice.js"></script>
+    <link rel="stylesheet" href="/styles/legalNotice.css">
+
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
-<body onload="includeHTML()">
+<body onload="initLegalNotice()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="legal-notice-container">
