--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -7,9 +7,10 @@
     <script src="/js/navBar.js"></script>
     <link rel="stylesheet" href="/styles/privacyPolicy.css">
     <script src="js/header.js"></script>
+    <script src="js/privacyPolicy.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
-<body onload="includeHTML()">
+<body onload="initPrivacyPolicy()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <img onclick="history.back()" class="arrow" src="/img/arrow-left-line.png" alt="">
