--- a/summary.html
+++ b/summary.html
@@ -14,122 +14,136 @@
     <script src="js/summary.js" defer></script>
     <script src="js/header.js" defer></script>
     <script src="js/board.js" defer></script>
- <script src="js/addTask.js" defer></script>
+    <script src="js/addTask.js" defer></script>
 
-    <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
+    <link rel="icon" type="image/x-icon" href="/img/join_logo.png" />
   </head>
   <body onload="start()">
     <!--  -->
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
-    <div class="summary-container-wrapper" id="summaryContainerWrapper">
-      <div class="summary-container" id="summaryContainer">
-        <div class="headline d-none" id="headline">
-          <span class="fs-50 fw-700">Join 100</span>
-          <span class="seperator"></span>
-          <span class="fs-27 fw-400">Key Metrics at a Glance</span>
-          <span class="seperator-mobile"></span>
-        </div>
-        <div class="flex-container d-none" id="flexContainer">
-          <div class="main-task-container">
-            <div class="check-rectangle">
-              <div>
+
+      <div class="summary-container-wrapper" id="summaryContainerWrapper">
+        <div class="summary-container" id="summaryContainer">
+          <div class="headline d-none" id="headline">
+            <span class="fs-50 fw-700">Join 100</span>
+            <span class="seperator"></span>
+            <span class="fs-27 fw-400">Key Metrics at a Glance</span>
+            <span class="seperator-mobile"></span>
+          </div>
+          <div class="flex-container d-none" id="flexContainer">
+            <div class="main-task-container">
+              <div class="check-rectangle">
+                <div>
+                  <a href="board.html">
+                    <div class="button-container gap-18">
+                      <div class="elipse">
+                        <div>
+                          <img class="edit-icon" src="./img/edit.png" alt="" />
+                        </div>
+                      </div>
+                      <div>
+                        <div
+                          class="fs-64 fw-600 center-text"
+                          id="toDoContainer"
+                        >
+                          0
+                        </div>
+                        <div class="fs-20">To-do</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div>
+                  <a href="board.html#done">
+                    <div class="button-container gap-18">
+                      <div class="elipse">
+                        <div>
+                          <img
+                            class="vector-icon"
+                            src="./img/vector.png"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div>
+                        <div class="fs-64 fw-600 center-text" id="done">0</div>
+                        <div class="fs-20">Done</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="urgency-summary">
                 <a href="board.html">
-                  <div class="button-container gap-18">
-                    <div class="elipse">
-                      <div>
-                        <img class="edit-icon" src="./img/edit.png" alt="" />
-                      </div>
-                    </div>
-                    <div>
-                      <div class="fs-64 fw-600 center-text" id="toDoContainer">0</div>
-                      <div class="fs-20">To-do</div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div>
-                <a href="board.html#done">
-                  <div class="button-container gap-18">
-                    <div class="elipse">
-                      <div>
-                        <img
-                          class="vector-icon"
-                          src="./img/vector.png"
-                          alt=""
-                        />
-                      </div>
-                    </div>
-                    <div>
-                      <div class="fs-64 fw-600 center-text" id="done">0</div>
-                      <div class="fs-20">Done</div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="urgency-summary">
-              <a href="board.html">
-                <div class="urgency-container">
-                  <div class="flex-container center gap-18">
-                    <div class="elipse-urgency">
-                      <div class="flex-container flex-column center">
-                        <img
-                          class="arrow-icon"
-                          src="./img/arrow-icon.png"
-                          alt=""
-                        />
-                        <!-- <img
+                  <div class="urgency-container">
+                    <div class="flex-container center gap-18">
+                      <div class="elipse-urgency">
+                        <div class="flex-container flex-column center">
+                          <img
+                            class="arrow-icon"
+                            src="./img/arrow-icon.png"
+                            alt=""
+                          />
+                          <!-- <img
                         class="arrow-icon mt-minus-5"
                         src="./assets/img/arrow.svg"
                         alt=""
                       /> -->
+                        </div>
+                      </div>
+                      <div>
+                        <div class="fs-64 fw-600 center-text" id="urgent">
+                          0
+                        </div>
+                        <div class="fs-16">Urgent</div>
                       </div>
                     </div>
-                    <div>
-                      <div class="fs-64 fw-600 center-text" id="urgent">0</div>
-                      <div class="fs-16">Urgent</div>
+                    <div class="line"></div>
+                    <div class="deadline-wrapper">
+                      <div class="deadline fw-700 fs-2 pb-13" id="deadline">
+                        29. Februar 2024
+                      </div>
+                      <div class="deadline fs-16">Upcoming Deadline</div>
                     </div>
                   </div>
-                  <div class="line"></div>
-                  <div class="deadline-wrapper">
-                    <div class="deadline fw-700 fs-2 pb-13" id="deadline">
-                      29. Februar 2024
-                    </div>
-                    <div class="deadline fs-16">Upcoming Deadline</div>
+                </a>
+              </div>
+              <div class="overview-container">
+                <a href="board.html">
+                  <div class="task-container">
+                    <div class="fs-64 fw-600" id="boardTasks">2</div>
+                    <div class="fs-20 fw-400">Tasks in Board</div>
                   </div>
-                </div>
-              </a>
-            </div>
-            <div class="overview-container">
-              <a href="board.html">
-                <div class="task-container">
-                  <div class="fs-64 fw-600" id="boardTasks">2</div>
-                  <div class="fs-20 fw-400">Tasks in Board</div>
-                </div>
-              </a>
-              <a href="board.html">
-                <div class="task-container">
-                  <div class="fs-64 fw-600" id="progress">0</div>
-                  <div class="fs-20 fw-400">Tasks in Progress</div>
-                </div>
-              </a>
-              <a href="board.html#feedback">
-                <div class="task-container">
-                  <div class="fs-64 fw-600" id="await">0</div>
-                  <div class="fs-20 fw-400">Awaiting Feedback</div>
-                </div>
-              </a>
+                </a>
+                <a href="board.html">
+                  <div class="task-container">
+                    <div class="fs-64 fw-600" id="progress">0</div>
+                    <div class="fs-20 fw-400">Tasks in Progress</div>
+                  </div>
+                </a>
+                <a href="board.html#feedback">
+                  <div class="task-container">
+                    <div class="fs-64 fw-600" id="await">0</div>
+                    <div class="fs-20 fw-400">Awaiting Feedback</div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="greet-container" id="greetContainer">
-        <div class="fs-47 fw-500 greeting greeting-content" id="greeting"></div>
+        <div class="greet-container" id="greetContainer">
+          <div
+            class="fs-47 fw-500 greeting greeting-content"
+            id="greeting"
+          ></div>
 
-        <div class="name-container name" id="name"><span id="greetingNameContainer" class="greetingName"></span></div>
+          <div class="name-container name" id="name">
+            <span id="greetingNameContainer" class="greetingName"></span>
+          </div>
+        </div>
       </div>
-    </div>
-    <!--  -->
+      <!--  -->
+  
   </body>
 </html>
