--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -6,6 +6,7 @@
     <title>Privacy Policy</title>
     <script src="/js/navBar.js"></script>
     <link rel="stylesheet" href="/styles/privacyPolicy.css">
+    <link rel="stylesheet" href="/styles/storage.css">
     <script src="js/header.js"></script>
     <script src="js/privacyPolicy.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
@@ -13,6 +14,8 @@
 <body onload="initPrivacyPolicy()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
+    <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
+    <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
     <img onclick="history.back()" class="arrow" src="/img/arrow-left-line.png" alt="">
     <div class="privacy-policy-container">
         <h1>Privacy Policy</h1>
