--- a/summary.html
+++ b/summary.html
@@ -6,6 +6,7 @@
     <title>Summary</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="./styles/summary.css" />
+    <link rel="stylesheet" href="/styles/storage.css">
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
@@ -22,6 +23,8 @@
     <!--  -->
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
+    <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
+    <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
 
       <div class="summary-container-wrapper" id="summaryContainerWrapper">
         <div class="summary-container" id="summaryContainer">
