--- a/board.html
+++ b/board.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/board.css" />
+    <link rel="stylesheet" href="/styles/storage.css">
 
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
@@ -24,6 +25,8 @@
 <body class="boardBody" onload="initBoard()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
+    <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
+    <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
     <div class="main-board-container">
         <div id="boardTaskOverlay"></div>
         <div class="menubar">
