click on background closes Task

--- a/board.html
+++ b/board.html
@@ -28,7 +28,7 @@
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
     <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
     <div class="main-board-container">
-        <div id="boardTaskOverlay"></div>
+        <div onclick="closeTask()" id="boardTaskOverlay"></div>
         <div class="menubar">
             <div class="headline">
                 <div>Board</div>
