--- a/summary.html
+++ b/summary.html
@@ -25,6 +25,12 @@
     <div w3-include-html="/templates/header.html"></div>
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
     <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
+    <div class="error-container d-none">
+      <h1>Oops!</h1>
+      <p>An error occurred because you are not logged in.</p>
+      <p>Please log in and try again.</p>
+      <div class="login-button-div"><a href="index.html" class="login-button">Login</a></div>
+    </div>
 
       <div class="summary-container-wrapper" id="summaryContainerWrapper">
         <div class="summary-container" id="summaryContainer">
