login register responsive

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
     <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
     <img class="posAbsolute logoSlideIn" src="./img/joinLogoBig.png" alt="Join-Logo">
-    <section class="posAbsolute right0 padTop60 padRight60 opacity0to1">
+    <section class="posAbsolute right0 padTop60 padRight60 opacity0to1 sectionSignUpMobile">
         <span class="fontSize16 padRight30">Not a Join user?</span>
         <a href="./register.html" class="cursorPointer darkBtn fontBold fontSize16 noDecoration">Sign up</a>
     </section>
     <section class="overDivFormLogIn opacity0to1">
         <form onsubmit="logIn(event)" class="formLogIn dFlex directionColumn alignCenter">
-            <h1>
+            <h1 class="logInH1">
                 Log in
             </h1>
             <div class="blueLine"></div>
