--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,7 @@
     <script src="js/summary.js" defer></script>
     <script src="js/header.js" defer></script>
     <script src="js/board.js" defer></script>
-    <script src="js/addTask.js" defer></script>
+    <script src="js/addTask.js"></script>
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png" />
   </head>
