--- a/addTask.html
+++ b/addTask.html
@@ -9,10 +9,12 @@
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
+    <script src="js/summary.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="/js/navBar.js" defer></script>
     <script src ="../js/addTask.js" defer></script>
     <script src="js/header.js" defer></script>
+    
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
   <body onload="initApp()">
