--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="/styles/storage.css">
+    <link rel="stylesheet" href="../styles/summary.css" />
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
