--- a/addTask.html
+++ b/addTask.html
@@ -6,6 +6,8 @@
     <title>AddTask</title>
     <link rel="stylesheet" href="../styles/addTask.css" />
     <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/summary.css" />
+
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
     <script src="./js/register.js" defer></script>
