--- a/board.html
+++ b/board.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/board.css" />
     <link rel="stylesheet" href="/styles/storage.css">
+    <link rel="stylesheet" href="../styles/summary.css" />
 
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
