--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
         <div class="right-side" id="right-side">
             <img onclick="backToList()" class="arrow" src="/img/arrow-left-line.png" alt="">
             <div class="right-side-infos" id="right-side-infos">
-                <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
+                <div class="contact-headline"><h1>Contacts</h1> <div class="contacts-line"></div> <h2>Better with a team</h2></div>
                 <div id="blue-underline"><img src="./img/blue-underline.png"></div>
                 <div id="show-contact-infos" class="hide-contact-infos"></div>
                 <div id="successfully-created" class="successfully-created">Contact successfully created</div>
