--- a/board.html
+++ b/board.html
@@ -51,28 +51,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="addTask"><button>Add Task <img src="img/add.png"></button></div>
+                <div class="addTask cursorPointer" onclick="openAddTask()"><button>Add Task <img src="img/add.png"></button></div>
             </div>
         </div>
         <div class="progressBar">
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">To do</div> 
-                    <div class="plus">+</div>
+                    <div onclick="openAddTask()" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divToDo')" ondragleave="removeEmptyDiv('divToDo')" ondrop="moveTo('toDo')" id="divToDo" class="column flex1"></div>
             </div>
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">In  progress</div>
-                    <div class="plus">+</div>
+                    <div onclick="openAddTask()" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divInProgress')" ondragleave="removeEmptyDiv('divInProgress')" ondrop="moveTo('inProgress')" id="divInProgress" class="column flex1"></div>
             </div>
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">Await feedback</div>
-                    <div class="plus">+</div>
+                    <div onclick="openAddTask()" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divAwaitFeedback')" ondragleave="removeEmptyDiv('divAwaitFeedback')" ondrop="moveTo('awaitFeedback')" id="divAwaitFeedback" class="column flex1"></div>
             </div>
