--- a/board.html
+++ b/board.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="addTask cursorPointer" onclick="openAddTask()"><button>Add Task <img src="img/add.png"></button></div>
+                <button onclick="openAddTask()" class="darkBtn cursorPointer">Add Task <img src="img/add.png"></button>                
             </div>
         </div>
         <div class="progressBar">
