--- a/board.html
+++ b/board.html
@@ -37,7 +37,7 @@
     <div class="main-board-container">
         <div onclick="closeTask()" id="boardTaskOverlay"></div>
         <div class="menubar">
-            <div class="headline">
+            <div class="headline-board">
                 <div>Board</div>
                 <div class="addTaskPlus"><img src="img/plus add task mobile.png" alt=""></div>
             </div>
