--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
+    <script src="js/storage.js"></script>
+    <script src="js/register.js"></script>
+    <script src="js/summary.js"></script>
+    <script src="js/index.js"></script>
     <script src="/js/navBar.js"></script>
-    <link rel="stylesheet" href="/styles/privacyPolicy.css">
-    <link rel="stylesheet" href="/styles/storage.css">
     <script src="js/header.js"></script>
     <script src="js/privacyPolicy.js"></script>
+    <link rel="stylesheet" href="/styles/privacyPolicy.css">
+    <link rel="stylesheet" href="/styles/storage.css">
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="initPrivacyPolicy()">
