summary responsive changes

--- a/summary.html
+++ b/summary.html
@@ -37,7 +37,7 @@
           <div class="headline d-none" id="headline">
             <span class="fs-50 fw-700">Join 100</span>
             <span class="seperator"></span>
-            <span class="fs-27 fw-400">Key Metrics at a Glance</span>
+            <span class="headline-description fs-27 fw-400">Key Metrics at a Glance</span>
             <span class="seperator-mobile"></span>
           </div>
           <div class="flex-container d-none" id="flexContainer">
