responsive addTask plus

--- a/board.html
+++ b/board.html
@@ -39,7 +39,7 @@
         <div class="menubar">
             <div class="headline-board">
                 <div>Board</div>
-                <div class="addTaskPlus"><img src="img/plus add task mobile.png" alt=""></div>
+                <div class="addTaskPlus" onclick="openAddTask()"><img src="img/plus add task mobile.png" alt=""></div>
             </div>
             <div class="searchAdd">
                 <div class="fakeInput"> 
