--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <script src="./js/summary.js" defer></script>
     <script src="/js/navBar.js"></script>
     <script src="/js/contacts.js"></script>
-    <script src="/js/contacts-html.js"></script>
+    <script src="/js/templates/contacts-html.js"></script>
     <script src="js/header.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
