--- a/board.html
+++ b/board.html
@@ -39,7 +39,7 @@
         <div class="menubar">
             <div class="headline-board">
                 <div>Board</div>
-                <div class="addTaskPlus" onclick="openAddTask()"><img src="img/plus add task mobile.png" alt=""></div>
+                <div class="addTaskPlus" onclick="openAddTask('toDo')"><img src="img/plus add task mobile.png" alt=""></div>
             </div>
             <div class="searchAdd">
                 <div class="fakeInput"> 
@@ -51,28 +51,28 @@
                         </div>
                     </div>
                 </div>
-                <button onclick="openAddTask()" class="darkBtn cursorPointer">Add Task <img src="img/add.png"></button>                
+                <button onclick="openAddTask('toDo')" class="darkBtn cursorPointer">Add Task <img src="img/add.png"></button>                
             </div>
         </div>
         <div class="progressBar">
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">To do</div> 
-                    <div onclick="openAddTask()" class="plus">+</div>
+                    <div onclick="openAddTask('toDo')" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divToDo')" ondragleave="removeEmptyDiv('divToDo')" ondrop="moveTo('toDo')" id="divToDo" class="column flex1"></div>
             </div>
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">In  progress</div>
-                    <div onclick="openAddTask()" class="plus">+</div>
+                    <div onclick="openAddTask('inProgress')" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divInProgress')" ondragleave="removeEmptyDiv('divInProgress')" ondrop="moveTo('inProgress')" id="divInProgress" class="column flex1"></div>
             </div>
             <div class="lineUp dFlex directionColumn">
                 <div class="progressHead">
                     <div class="headlineBoardTasks">Await feedback</div>
-                    <div onclick="openAddTask()" class="plus">+</div>
+                    <div onclick="openAddTask('awaitFeedback')" class="plus">+</div>
                 </div>
                 <div ondragover="allowDrop(event), showEmptyDiv('divAwaitFeedback')" ondragleave="removeEmptyDiv('divAwaitFeedback')" ondrop="moveTo('awaitFeedback')" id="divAwaitFeedback" class="column flex1"></div>
             </div>
