--- a/addTask.html
+++ b/addTask.html
@@ -28,5 +28,5 @@
     <p>Please log in and try again.</p>
     <div class="login-button-div"><a href="index.html" class="login-button">Login</a></div>
   </div>
-  <form id="taskForm"><div w3-include-html="/templates/addTaskTemplate.html"></div></form>
+  <form  onsubmit="createTask()"  id="taskForm"><div w3-include-html="/templates/addTaskTemplate.html"></div></form>
 </body>
