urgent deadline fix

--- a/summary.html
+++ b/summary.html
@@ -111,7 +111,7 @@
                     <div class="line"></div>
                     <div class="deadline-wrapper">
                       <div class="deadline fw-700 fs-2 pb-13" id="deadline">
-                        29. Februar 2024
+                        you have no
                       </div>
                       <div class="deadline fs-16">Upcoming Deadline</div>
                     </div>
